fixed the text overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ textarea {
   margin: 25px 0;
   padding: 15px 15px 10px 15px;
   box-shadow: 8px 10px #000;
+  overflow-wrap: break-word;
   width: 90%;
   height: 100%;
   justify-content: space-between;
